パスのtypeがnil = 通常パス にフィルタリングするよう変更

--- a/statsbomb.ipynb
+++ b/statsbomb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "a485d23f",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "a35d8a66",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "1097bc01",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        "[4326 rows x 35 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "40105f68",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
        "Name: timestamp, Length: 4326, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "b17bd0ad",
    "metadata": {},
    "outputs": [],
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "46ad9146",
    "metadata": {},
    "outputs": [
@@ -788,7 +788,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "65d56551",
    "metadata": {},
    "outputs": [
@@ -826,17 +826,17 @@
        "Clearance              17\n",
        "Tactical Shift          6\n",
        "Substitution            5\n",
-       "Half End                4\n",
        "Half Start              4\n",
+       "Half End                4\n",
        "Shield                  3\n",
-       "Referee Ball-Drop       2\n",
        "Starting XI             2\n",
+       "Referee Ball-Drop       2\n",
        "Offside                 1\n",
        "Bad Behaviour           1\n",
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,30 +851,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "id": "d56c06da",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4       {'recipient': {'id': 3538, 'name': 'Wayne Mark...\n",
-       "7       {'recipient': {'id': 20175, 'name': 'Ryan Gigg...\n",
-       "11      {'recipient': {'id': 3267, 'name': 'Luis Anton...\n",
-       "13      {'recipient': {'id': 5503, 'name': 'Lionel And...\n",
-       "15      {'recipient': {'id': 5203, 'name': 'Sergio Bus...\n",
-       "                              ...                        \n",
-       "4306    {'recipient': {'id': 4891, 'name': 'Ibrahim Af...\n",
-       "4309    {'recipient': {'id': 20125, 'name': 'Carles Pu...\n",
-       "4313    {'length': 19.0, 'angle': 0.0, 'height': {'id'...\n",
-       "4320    {'recipient': {'id': 15036, 'name': 'Edwin van...\n",
-       "4323    {'length': 53.235325, 'angle': 0.09406123, 'he...\n",
-       "Name: pass, Length: 1222, dtype: object"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'numpy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-a826d6a573a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# print(pass_list[9])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# print(pass_list[11])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_printoptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpass_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'numpy' is not defined"
+     ]
     }
    ],
    "source": [
@@ -883,12 +873,12 @@
     "# print(pass_list[7])\n",
     "# print(pass_list[9])\n",
     "# print(pass_list[11])\n",
-    "pass_list"
+    "print(pass_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "a760e3a7",
    "metadata": {},
    "outputs": [
@@ -983,7 +973,7 @@
        "[1222 rows x 1 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "da689c96",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1062,7 @@
        "max       3.141593"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,11 +1073,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "bacd3ad2",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'recipient': {'id': 3538, 'name': 'Wayne Mark Rooney'},\n",
+       " 'length': 1.4142135,\n",
+       " 'angle': 2.3561945,\n",
+       " 'height': {'id': 1, 'name': 'Ground Pass'},\n",
+       " 'end_location': [60.0, 42.0],\n",
+       " 'type': {'id': 65, 'name': 'Kick Off'},\n",
+       " 'body_part': {'id': 40, 'name': 'Right Foot'}}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pass_list[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c451a11b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "1222\n"
+     ]
+    }
+   ],
+   "source": [
+    "# パスの種別（キックオフ、コーナーキックなど）を出す\n",
+    "print(len(list(filter(lambda x: ('type' in x.keys()) == True, pass_list)))) # 200\n",
+    "print(pass_list.size) # 1222\n",
+    "\n",
+    "# あれ、typeがあるのってあまりないのか..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "179b6fac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Recovery        100\n",
+       "Throw-in         36\n",
+       "Free Kick        28\n",
+       "Goal Kick        18\n",
+       "Kick Off          6\n",
+       "Corner            6\n",
+       "Interception      6\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# データを目視した感じ、「普通のパス」にはtypeがない？？ということでtypeのデータ出してみる\n",
+    "pass_pd = pd.Series(list(filter(lambda x: ('type' in x.keys()) == True, pass_list)))\n",
+    "pass_type_list = pd.Series(pass_pd.map(lambda x: x['type']).map(lambda x: x['name']))\n",
+    "pass_type_list.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cb0e079",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# ref: https://github.com/statsbomb/open-data/blob/master/doc/Open%20Data%20Events%20v4.0.0.pdf\n",
+    "# Interception is \"one touch pass off an interception\"\n",
+    "# Recovery is \"one touch pass off a loose ball interception\""
+   ]
   }
  ],
  "metadata": {
