少し調査用にeventのjsonをノーマライズして出力してみた

--- a/statsbomb.ipynb
+++ b/statsbomb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "a485d23f",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,13 @@
     "# match/16/22.json\n",
     "# \n",
     "with open(\"./data/events/18236.json\") as datafile:\n",
-    "  data = json.load(datafile)\n",
+    "    data = json.load(datafile)\n",
     "dataframe = pd.DataFrame(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "a35d8a66",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "1097bc01",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        "[4326 rows x 35 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
+   "id": "2569b7a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id\n",
+      "index\n",
+      "period\n",
+      "timestamp\n",
+      "minute\n",
+      "second\n",
+      "possession\n",
+      "duration\n",
+      "type.id\n",
+      "type.name\n",
+      "possession_team.id\n",
+      "possession_team.name\n",
+      "play_pattern.id\n",
+      "play_pattern.name\n",
+      "team.id\n",
+      "team.name\n",
+      "tactics.formation\n",
+      "tactics.lineup\n",
+      "related_events\n",
+      "location\n",
+      "player.id\n",
+      "player.name\n",
+      "position.id\n",
+      "position.name\n",
+      "pass.recipient.id\n",
+      "pass.recipient.name\n",
+      "pass.length\n",
+      "pass.angle\n",
+      "pass.height.id\n",
+      "pass.height.name\n",
+      "pass.end_location\n",
+      "pass.type.id\n",
+      "pass.type.name\n",
+      "pass.body_part.id\n",
+      "pass.body_part.name\n",
+      "carry.end_location\n",
+      "pass.backheel\n",
+      "pass.outcome.id\n",
+      "pass.outcome.name\n",
+      "ball_receipt.outcome.id\n",
+      "ball_receipt.outcome.name\n",
+      "under_pressure\n",
+      "duel.outcome.id\n",
+      "duel.outcome.name\n",
+      "duel.type.id\n",
+      "duel.type.name\n",
+      "counterpress\n",
+      "dribble.overrun\n",
+      "dribble.outcome.id\n",
+      "dribble.outcome.name\n",
+      "pass.cross\n",
+      "pass.switch\n",
+      "pass.aerial_won\n",
+      "interception.outcome.id\n",
+      "interception.outcome.name\n",
+      "pass.assisted_shot_id\n",
+      "pass.shot_assist\n",
+      "shot.statsbomb_xg\n",
+      "shot.end_location\n",
+      "shot.key_pass_id\n",
+      "shot.technique.id\n",
+      "shot.technique.name\n",
+      "shot.outcome.id\n",
+      "shot.outcome.name\n",
+      "shot.type.id\n",
+      "shot.type.name\n",
+      "shot.body_part.id\n",
+      "shot.body_part.name\n",
+      "shot.freeze_frame\n",
+      "goalkeeper.end_location\n",
+      "goalkeeper.type.id\n",
+      "goalkeeper.type.name\n",
+      "goalkeeper.position.id\n",
+      "goalkeeper.position.name\n",
+      "off_camera\n",
+      "goalkeeper.outcome.id\n",
+      "goalkeeper.outcome.name\n",
+      "shot.first_time\n",
+      "goalkeeper.technique.id\n",
+      "goalkeeper.technique.name\n",
+      "clearance.aerial_won\n",
+      "ball_recovery.offensive\n",
+      "ball_recovery.recovery_failure\n",
+      "goalkeeper.body_part.id\n",
+      "goalkeeper.body_part.name\n",
+      "pass.goal_assist\n",
+      "foul_won.defensive\n",
+      "block.save_block\n",
+      "foul_committed.card.id\n",
+      "foul_committed.card.name\n",
+      "substitution.outcome.id\n",
+      "substitution.outcome.name\n",
+      "substitution.replacement.id\n",
+      "substitution.replacement.name\n",
+      "foul_committed.type.id\n",
+      "foul_committed.type.name\n",
+      "bad_behaviour.card.id\n",
+      "bad_behaviour.card.name\n",
+      "foul_committed.advantage\n",
+      "foul_won.advantage\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nested な json を normalize してみる\n",
+    "normalized = pd.json_normalize(data)\n",
+    "# listの改行出力ってもっといい方法ない？？？\n",
+    "print(*normalized.columns.values, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "40105f68",
    "metadata": {},
    "outputs": [
@@ -721,7 +841,7 @@
        "Name: timestamp, Length: 4326, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b17bd0ad",
    "metadata": {},
    "outputs": [],
@@ -743,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "46ad9146",
    "metadata": {},
    "outputs": [
@@ -788,7 +908,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "65d56551",
    "metadata": {},
    "outputs": [
@@ -817,8 +937,8 @@
        "Dribbled Past          34\n",
        "Goal Keeper            29\n",
        "Interception           28\n",
-       "Block                  26\n",
        "Shot                   26\n",
+       "Block                  26\n",
        "Dispossessed           25\n",
        "Miscontrol             23\n",
        "Foul Won               22\n",
@@ -826,17 +946,17 @@
        "Clearance              17\n",
        "Tactical Shift          6\n",
        "Substitution            5\n",
-       "Half Start              4\n",
        "Half End                4\n",
+       "Half Start              4\n",
        "Shield                  3\n",
-       "Starting XI             2\n",
        "Referee Ball-Drop       2\n",
+       "Starting XI             2\n",
        "Offside                 1\n",
        "Bad Behaviour           1\n",
        "Name: type, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,19 +971,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "d56c06da",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'numpy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-a826d6a573a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# print(pass_list[9])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# print(pass_list[11])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_printoptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpass_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'numpy' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4       {'recipient': {'id': 3538, 'name': 'Wayne Mark...\n",
+      "7       {'recipient': {'id': 20175, 'name': 'Ryan Gigg...\n",
+      "11      {'recipient': {'id': 3267, 'name': 'Luis Anton...\n",
+      "13      {'recipient': {'id': 5503, 'name': 'Lionel And...\n",
+      "15      {'recipient': {'id': 5203, 'name': 'Sergio Bus...\n",
+      "                              ...                        \n",
+      "4306    {'recipient': {'id': 4891, 'name': 'Ibrahim Af...\n",
+      "4309    {'recipient': {'id': 20125, 'name': 'Carles Pu...\n",
+      "4313    {'length': 19.0, 'angle': 0.0, 'height': {'id'...\n",
+      "4320    {'recipient': {'id': 15036, 'name': 'Edwin van...\n",
+      "4323    {'length': 53.235325, 'angle': 0.09406123, 'he...\n",
+      "Name: pass, Length: 1222, dtype: object\n"
      ]
     }
    ],
@@ -878,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a760e3a7",
    "metadata": {},
    "outputs": [
@@ -973,7 +1100,7 @@
        "[1222 rows x 1 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "da689c96",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1189,7 @@
        "max       3.141593"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "bacd3ad2",
    "metadata": {},
    "outputs": [
@@ -1089,7 +1216,7 @@
        " 'body_part': {'id': 40, 'name': 'Right Foot'}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "c451a11b",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "id": "179b6fac",
    "metadata": {},
    "outputs": [
@@ -1134,13 +1261,13 @@
        "Throw-in         36\n",
        "Free Kick        28\n",
        "Goal Kick        18\n",
-       "Kick Off          6\n",
        "Corner            6\n",
+       "Kick Off          6\n",
        "Interception      6\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0cb0e079",
    "metadata": {},
    "outputs": [],
@@ -1163,6 +1290,22 @@
     "# Interception is \"one touch pass off an interception\"\n",
     "# Recovery is \"one touch pass off a loose ball interception\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c5a3c75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f2372a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
